Fix iframe behavior on iOS

--- a/src/lity.less
+++ b/src/lity.less
@@ -180,8 +180,11 @@
 .lity-iframe-container {
     width: 100%;
     height: 0;
-    overflow: hidden;
     padding-top: @lity-iframe-ratio * 100%;
+    overflow: auto;
+    pointer-events: auto;
+    transform: translateZ(0);
+    -webkit-overflow-scrolling: touch;
 
     iframe {
         position: absolute;
